--- a/www/edit.html
+++ b/www/edit.html
@@ -32,10 +32,12 @@
                     class="btn btn-outline-primary mx-auto">Download</button>
                 <button style="border-color: pink !important; background-color: rgba(0,0,0,.75);" type="button" onclick="state.love()"
                     class="btn btn-outline-success mx-auto">Love</button>
-                <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.hate()"
+                <button style="background-color: rgba(0,0,0,.75); border-color:brown;" type="button" onclick="state.hate()"
                     class="btn btn-outline-danger mx-auto">Hate</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.save_algorithm()"
                     class="owned-content logged_in_content btn btn-outline-success mx-auto">Save</button>
+                <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.delete_algorithm()"
+                    class="owned-content logged_in_content btn btn-outline-danger mx-auto">Delete</button>
             </h1>
             <!---#ALGORITHM_COMMENTS#--->
         </div>
