--- a/www/browse.html
+++ b/www/browse.html
@@ -1,3 +1,3 @@
-<div class="row connected_content out-of-sight" id="browse" style="display: flex; justify-content: center; align-items: center;">
+<div class="row connected_content out-of-sight" id="<!---#VIEW_IDENTIFIER#--->" style="display: flex; justify-content: center; align-items: center;">
     <!---#BROWSE_VIEW#--->
 </div>
