--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
         //{{delete_algorithm.html}}
         //{{request.html}}
         //{{home.html}}
-        //{{browse_view.html}}
+        //{{browse.html}}
         //{{edit.html}}
         //{{create.html}}
         //{{delete_account.html}}
