--- a/www/profile.html
+++ b/www/profile.html
@@ -16,6 +16,7 @@
                     onclick="state.show_page(pages.DELETE_ACCOUNT);">Delete Account</button>
             </div>
         </h1>
+        <div id="profile_algorithm_list"></div>
     </div>
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
