--- a/www/profile.html
+++ b/www/profile.html
@@ -21,5 +21,5 @@
         <div class="col-0 col-sm-0 col-md-1 col-lg-2">
         </div>
     </div>
-    <div id="profile_algorithm_list"></div>
+    <div id="profile_algorithm_list" style="text-align: center;"></div>
 </div>
