--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/protobuf.js"></script>
+    <script type="text/javascript" src="js/html2canvas.min.js"></script>
 </head>
 
 <body>
