--- a/www/canvas.html
+++ b/www/canvas.html
@@ -6,8 +6,6 @@
   <meta name="viewport"
     content="height = device-height, width = device-width, initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 1.0, user-scalable = no, target-densitydpi = high-dpi" />
 
-  //{{js/html2canvas.min.js}}
-
   <style type="text/css">
     body,
     html {
@@ -30,6 +28,8 @@
   <div id="body" style="position:absolute; width:100%; height:100%;">
   </div>
   <script>
+    
+    {{js/html2canvas.min.js}}
     //{{js/protobuf.js}}
     //{{js/jquery.min.js}}
     window.$ = $;
