--- a/www/canvas.html
+++ b/www/canvas.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta name="viewport"
-    content="height = device-height, width = device-width, initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 1.0, user-scalable = no, target-densitydpi = high-dpi" />
+    content="height = device-height, width = device-width, initial-scale = 1.0, minimum-scale = 1.0, maximum-scale = 1.0, user-scalable = no" />
 
   <style type="text/css">
     body,
@@ -29,7 +29,7 @@
   </div>
   <script>
     
-    {{js/html2canvas.min.js}}
+    //{{js/html2canvas.min.js}}
     //{{js/protobuf.js}}
     //{{js/jquery.min.js}}
     window.$ = $;
