--- a/www/index.html
+++ b/www/index.html
@@ -957,10 +957,26 @@
                 !protobuf)
                 window.setTimeout(on_resources_loaded, 1000);
             else {
-                $("#belownav").on('mousemove mousedown mouseup mousewheel', function (e) {
-                    window.background_iframe = document.getElementById("background_iframe")
-                    var backgrond = $(window.background_iframe);
-                    backgrond.trigger(e);
+
+                window.background_iframe = document.getElementById("background_iframe")
+                var copy_and_dispatch = function (event) {
+                    var eventCopy = document.createEvent("MouseEvents");
+                    eventCopy.initMouseEvent(event.type, event.bubbles, event.cancelable, event.view, event.detail,
+                        event.pageX || event.layerX, event.pageY || event.layerY, event.clientX, event.clientY, event.ctrlKey, event.altKey,
+                        event.shiftKey, event.metaKey, event.button, event.relatedTarget);
+                    window.background_iframe.dispatchEvent(eventCopy);
+                }
+                document.getElementById("belownav").addEventListener('mousemove', function (e) {
+                    copy_and_dispatch(e)
+                });
+                document.getElementById("belownav").addEventListener('mousedown', function (e) {
+                    copy_and_dispatch(e)
+                });
+                document.getElementById("belownav").addEventListener('mouseup', function (e) {
+                    copy_and_dispatch(e)
+                });
+                document.getElementById("belownav").addEventListener('mousewheel', function (e) {
+                    copy_and_dispatch(e)
                 });
 
 
