--- a/www/index.html
+++ b/www/index.html
@@ -960,11 +960,11 @@
 
                 window.background_iframe = document.getElementById("background_iframe")
                 var copy_and_dispatch = function (event) {
-                    var eventCopy = document.createEvent("MouseEvents");
-                    eventCopy.initMouseEvent(event.type, event.bubbles, event.cancelable, event.view, event.detail,
-                        event.pageX || event.layerX, event.pageY || event.layerY, event.clientX, event.clientY, event.ctrlKey, event.altKey,
-                        event.shiftKey, event.metaKey, event.button, event.relatedTarget);
-                    window.background_iframe.dispatchEvent(eventCopy);
+                    // var eventCopy = document.createEvent("MouseEvents");
+                    // eventCopy.initMouseEvent(event.type, event.bubbles, event.cancelable, event.view, event.detail,
+                    //     event.pageX || event.layerX, event.pageY || event.layerY, event.clientX, event.clientY, event.ctrlKey, event.altKey,
+                    //     event.shiftKey, event.metaKey, event.button, event.relatedTarget);
+                    window.background_iframe.dispatchEvent(event);
                 }
                 document.getElementById("belownav").addEventListener('mousemove', function (e) {
                     copy_and_dispatch(e)
