--- a/www/index.html
+++ b/www/index.html
@@ -363,7 +363,7 @@
                 $("#popover_message" + (this.popover_counter - 1)).html(proto.details);
             }
             else if (proto.type == Message.Type.PROGRESS) {
-                this.show_page(pages.PROCESSING, proto.message, proto.details, false);
+                this.show_page(pages.PROCESSING, proto.message, proto.details, true);
             }
             else if (proto.type == Message.Type.SAVE_ALGORITHM) {
                 this.hide_popovers();
