--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>MetaHumanity.xyz</title>
+    <title>CrazedCoding.com</title>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -27,7 +27,7 @@
 <body>
     <div id="menu-backgrond" class="topnav-background" style="display:none;"></div>
     <div id="menu" class="topnav" style="display:none !important;">
-        <a id="home_button" onclick="state.collapse_nav();" style="float: left;" href="#home">MetaHumanity.xyz</a>
+        <a id="home_button" onclick="state.collapse_nav();" style="float: left;" href="#home">CrazedCoding.com</a>
         <a id="browse_button" onclick="state.collapse_nav();" href="#browse">Browse</a>
         <a id="edit_button" onclick="state.collapse_nav();" href="#edit">Edit</a>
         <a id="create_button" onclick="state.collapse_nav();" href="#create">Create</a>
@@ -3031,7 +3031,7 @@
         window.addEventListener("message", function (event) {
             // Do we trust the sender of this message?  (might be
             // different from what we originally opened, for example).
-            if (event.origin.toLowerCase() != "https://www.metahumanity.xyz")
+            if (event.origin.toLowerCase() != "https://www.crazedcoding.com")
                 return;
             try {
                 var message = JSON.parse(event.data);
