--- a/www/canvas.html
+++ b/www/canvas.html
@@ -32,6 +32,7 @@
     //{{js/html2canvas.min.js}}
     //{{js/protobuf.js}}
     //{{js/jquery.min.js}}
+    //{{js/dsp.js}}
     window.$ = $;
 
     var userAlgorithm = null;
