--- a/www/canvas.html
+++ b/www/canvas.html
@@ -33,6 +33,7 @@
     //{{js/protobuf.js}}
     //{{js/jquery.min.js}}
     //{{js/dsp.js}}
+    //{{js/webgl-math.min.js}}
     window.$ = $;
 
     var userAlgorithm = null;
